# asc-devkit

./: .clang-format  .clangd  .clangd.in  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG_en.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_en.md  OAT.xml  README.md  README_en.md  SECURITY.md  SECURITY_en.md  Third_Party_Open_Source_Softerware_Notice  Third_Party_Open_Source_Software_List.yaml  Third_Party_Open_Source_Software_Notice  build.sh  classify_rule.yaml  install_deps.sh  markdown-link-check.toml  ruff.toml  run.sh  version.cmake  version.info
cmake/: AICPUConfig.cmake  ASCConfig.cmake  CMakeLists.txt  ascendc.cmake  bisheng_config.cmake  bisheng_intf.cmake  config.cmake  dependencies.cmake  fetch_cann_cmake.cmake  func.cmake  function.cmake  host_config.cmake  host_intf.cmake  intf_pub_linux.cmake  makeself.cmake  package.cmake  system_package_pre_build.cmake  version.h.in  version_info.cmake
cmake/asc/: AICPUConfig.cmake  ASCConfig.cmake  aicpu-config.cmake  asc-config.cmake  ascendc.cmake
cmake/device/: CMakeLists.txt
cmake/device_precompile_project/: CMakeLists.txt
cmake/device_preprocess_project/: CMakeLists.txt
cmake/host_project/: CMakeLists.txt
cmake/install/: help.info  install.sh
cmake/modules/: Findmetadef.cmake  Findmmpa.cmake  Findpvmodel.cmake  Findsecurec.cmake
cmake/util/: ascendc_pack_kernel.sh  channel.py  constants.py  copy_obj.sh  extract_host_stub.py  extract_src_template.py  extract_static_library.py  gen_host_stub.py  host_stub_util.py  merge_device_obj.py  merge_mix_obj.sh  merge_obj.sh  merge_obj_text.sh  process_dump_info.py  recompile_binary.py  struct_parser.py  test_data_host_stub.txt  test_struct_parser.py  update_host_stub.py
impl/: CMakeLists.txt
impl/adv_api/: CMakeLists.txt  gen_kernel_tiling.cmake
impl/aicore/: CMakeLists.txt
impl/aicpu_api/: CMakeLists.txt  aicpu_dump.cpp
impl/basic_api/: CMakeLists.txt  common_types.h  kernel_check.h  kernel_check_util.h  kernel_event.h  kernel_log.h  kernel_macros.h  kernel_npu_debug.h  kernel_operator_atomic_intf_impl.h  kernel_operator_block_sync_intf_impl.h  kernel_operator_cache_intf_impl.h  kernel_operator_common_intf_impl.h  kernel_operator_conv2d_base_impl.h  kernel_operator_conv2d_intf_impl.h  kernel_operator_coord.h  kernel_operator_data_copy_base_impl.h  kernel_operator_data_copy_check.h  kernel_operator_data_copy_intf_impl.h  kernel_operator_determine_compute_sync_intf_impl.h  kernel_operator_dump_tensor_intf_impl.h  kernel_operator_fixpipe_intf_impl.h  kernel_operator_gemm_base_impl.h  kernel_operator_gemm_intf_impl.h  kernel_operator_intf_impl.h  kernel_operator_layout.h  kernel_operator_list_tensor_intf_impl.h  kernel_operator_mm_base_impl.h  kernel_operator_mm_bitmode_intf_impl.h  kernel_operator_mm_bitmode_struct.h  kernel_operator_mm_check.h  kernel_operator_mm_intf_impl.h  kernel_operator_mm_load2d_impl.h  kernel_operator_proposal_base_impl.h  kernel_operator_proposal_intf_impl.h  kernel_operator_scalar_intf_impl.h  kernel_operator_set_atomic_intf_impl.h  kernel_operator_symbol_override_impl.h  kernel_operator_sys_var_intf_impl.h  kernel_operator_tensor_trait.h  kernel_operator_vec_bilinearinterpolation_intf_impl.h  (+35 more)
impl/c_api/: CMakeLists.txt  vector_compute_c_api_impl.h
impl/micro_api/: kernel_micro_addrreg_intf_impl.h  kernel_micro_common_intf_impl.h  kernel_micro_copy_intf_impl.h  kernel_micro_datacopy_intf_impl.h  kernel_micro_gather_mask_intf_impl.h  kernel_micro_histograms_intf_impl.h  kernel_micro_intf_impl.h  kernel_micro_maskreg_intf_impl.h  kernel_micro_membar_intf_impl.h  kernel_micro_pack_intf_impl.h  kernel_micro_struct_intf_impl.h  kernel_micro_vec_arange_intf_impl.h  kernel_micro_vec_binary_intf_impl.h  kernel_micro_vec_binary_scalar_intf_impl.h  kernel_micro_vec_cmpsel_intf_impl.h  kernel_micro_vec_createvecindex_intf_impl.h  kernel_micro_vec_duplicate_intf_impl.h  kernel_micro_vec_fused_intf_impl.h  kernel_micro_vec_reduce_intf_impl.h  kernel_micro_vec_ternary_scalar_intf_impl.h  kernel_micro_vec_unary_intf_impl.h  kernel_micro_vec_vconv_intf_impl.h
impl/micro_api_inc/: kernel_micro_addrreg_intf.h  kernel_micro_common_intf.h  kernel_micro_copy_intf.h  kernel_micro_datacopy_intf.h  kernel_micro_gather_mask_intf.h  kernel_micro_histograms_intf.h  kernel_micro_intf.h  kernel_micro_maskreg_intf.h  kernel_micro_pack_intf.h  kernel_micro_utils.h  kernel_micro_vec_arange_intf.h  kernel_micro_vec_binary_intf.h  kernel_micro_vec_binary_scalar_intf.h  kernel_micro_vec_cmpsel_intf.h  kernel_micro_vec_duplicate_intf.h  kernel_micro_vec_fused_intf.h  kernel_micro_vec_reduce_intf.h  kernel_micro_vec_ternary_scalar_intf.h  kernel_micro_vec_unary_intf.h  kernel_micro_vec_vconv_intf.h
impl/simt_api/: asc_bf16_impl.h  asc_fp16_impl.h  asc_fp8_impl.h  cooperative_groups_impl.h  device_atomic_functions_impl.h  device_functions_impl.h  device_sync_functions_impl.h  device_warp_functions_impl.h  internal_functions_impl.h  kernel_simt_atomic_intf_impl.h  kernel_simt_bessel_intf_impl.h  kernel_simt_cast_intf_impl.h  kernel_simt_cmp_intf_impl.h  kernel_simt_common_intf_impl.h  kernel_simt_intf_impl.h  kernel_simt_math_intf_impl.h  kernel_simt_print_intf_impl.h  kernel_simt_transcendental_intf_impl.h  kernel_simt_warp_level_intf_impl.h  math_functions_impl.h  simt_atomic_intf_impl.h  simt_bessel_intf_impl.h  simt_cast_intf_impl.h  simt_common_intf_impl.h  simt_intf_impl.h  simt_math_intf_impl.h  simt_transcendental_intf_impl.h  simt_warp_level_intf_impl.h  vector_functions_impl.h
impl/utils/: CMakeLists.txt  common_types.h  sys_constants.h  sys_macros.h
ops_templates/act/: CMakeLists.txt  OWNERS  README.md
tools/: CMakeLists.txt
tools/aclrtc/: CMakeLists.txt  acl_rt_compile.cpp
tools/asc_op_compile_base/: CMakeLists.txt  __init__.py
tools/ascc/: CMakeLists.txt
tools/opbuild/: CMakeLists.txt  op_aclnn_fallback_generator.cpp  op_aclnn_fallback_generator.h  op_aclnn_generator.cpp  op_aclnn_generator.h  op_build.cpp  op_build_error_codes.h  op_cfg_generator.cpp  op_cfg_generator.h  op_cpu_cfg_generator.cpp  op_generator.h  (+8 more)
(+22228 files in other folders)
